--- a/language/fr.json
+++ b/language/fr.json
@@ -2,25 +2,39 @@
   "index": {
     "meta": {
       "title": "Accueil - La Casa del Aire",
-      "description": "Bienvenue à La Casa del Aire, un espace rural unique pour profiter du calme et de la nature."
+      "description": "Bienvenue à La Casa del Aire, un espace rural unique où vous pourrez profiter de la tranquillité et de l'environnement naturel."
     },
     "title": "Accueil",
-    "description": "Bienvenue sur notre site."
+    "description": "Bienvenue sur notre site web.",
+    "hero": {
+      "title": "Vivez l'expérience de quelques jours uniques dans la 'dehesa' d'Estrémadure, entre nature, confort et vie rurale."
+    }
   },
   "casa": {
     "meta": {
       "title": "La Maison - La Casa del Aire",
-      "description": "Découvrez La Casa del Aire : de grands espaces, un design minimaliste et tout le confort pour votre séjour."
+      "description": "Découvrez La Casa del Aire : espaces spacieux, design minimaliste et tout le confort pour votre séjour."
     },
     "title": "La Maison",
-    "description": "De grands espaces et un design minimaliste pour un séjour parfait."
+    "description": "Espaces spacieux et design minimaliste pour un séjour parfait."
   },
   "entorno": {
     "meta": {
-      "title": "Les Environs - La Casa del Aire",
-      "description": "Découvrez les environs naturels de La Casa del Aire : prairies, sentiers et paysages uniques pour se déconnecter."
+      "title": "L'Environnement - La Casa del Aire",
+      "description": "Découvrez l'environnement naturel de La Casa del Aire : 'dehesas', sentiers et un paysage unique pour vous déconnecter."
     },
-    "title": "Les Environs",
+    "title": "L'Environnement",
     "description": "Explorez la nature qui entoure notre maison."
+  },
+  "navbar": {
+    "logo": "Casa del Aire",
+    "reserve": "Réserver",
+    "menu": "Menu"
+  },
+  "footer": {
+    "rights": "La Casa del Aire. Tous droits réservés.",
+    "madeWith": "Fait avec",
+    "by": "par",
+    "language": "Français (FR)"
   }
 }
