--- a/language/pt.json
+++ b/language/pt.json
@@ -2,25 +2,39 @@
   "index": {
     "meta": {
       "title": "Início - La Casa del Aire",
-      "description": "Bem-vindo à La Casa del Aire, um espaço rural único para desfrutar da tranquilidade e da natureza."
+      "description": "Bem-vindo a La Casa del Aire, um espaço rural único onde pode desfrutar da tranquilidade e do ambiente natural."
     },
     "title": "Início",
-    "description": "Bem-vindo ao nosso site."
+    "description": "Bem-vindo ao nosso website.",
+    "hero": {
+      "title": "Viva a experiência de dias únicos na 'dehesa' estremenha, entre a natureza, o conforto e a vida rural."
+    }
   },
   "casa": {
     "meta": {
       "title": "A Casa - La Casa del Aire",
-      "description": "Conheça a Casa del Aire: espaços amplos, design minimalista e todo o conforto para a sua estadia."
+      "description": "Conheça La Casa del Aire: espaços amplos, design minimalista e todas as comodidades para a sua estadia."
     },
     "title": "A Casa",
     "description": "Espaços amplos e design minimalista para uma estadia perfeita."
   },
   "entorno": {
     "meta": {
-      "title": "Os Arredores - La Casa del Aire",
-      "description": "Descubra os arredores naturais da Casa del Aire: campos, trilhas e uma paisagem única para desligar."
+      "title": "O Entorno - La Casa del Aire",
+      "description": "Descubra o entorno natural de La Casa del Aire: 'dehesas', trilhos e uma paisagem única para descontrair."
     },
-    "title": "Os Arredores",
+    "title": "O Entorno",
     "description": "Explore a natureza que rodeia a nossa casa."
+  },
+  "navbar": {
+    "logo": "Casa del Aire",
+    "reserve": "Reservar",
+    "menu": "Menu"
+  },
+  "footer": {
+    "rights": "La Casa del Aire. Todos os direitos reservados.",
+    "madeWith": "Feito com",
+    "by": "por",
+    "language": "Português (PT)"
   }
 }
